# hexerator

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  commandline.md  design.md  features.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: linux.yml  rust.yml  windows.yml
help/: index.md  keys.md  modal-editing.md  perspective.md  shortcut-keys.md
hexerator-plugin-api/: Cargo.toml
hexerator-plugin-api/src/: lib.rs
lua/: color.lua  exec.lua  fill.lua
markdown/: lua_help.md
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
scripts/: gen-prim-test-file.rs
src/: app.rs  args.rs  backend.rs  color.rs  config.rs  damage_region.rs  data.rs  dec_conv.rs  edit_buffer.rs  event.rs  find_util.rs  gui.rs  hex_conv.rs  hex_ui.rs  input.rs  layout.rs  lens.rs  main.rs  meta.rs  meta_state.rs  metafile.rs  parse_offset.rs  parse_radix.rs  plugin.rs  preferences.rs  region.rs  result_ext.rs  scripting.rs  session_prefs.rs  shell.rs  slice_ext.rs  source.rs  str_ext.rs  struct_meta_item.rs  timer.rs  ui.rs  update.rs  util.rs  value_color.rs  view.rs  (+2 more)
src/app/: backend_command.rs  command.rs  debug.rs  edit_state.rs  edit_target.rs  interact_mode.rs  layout.rs  perspective.rs  presentation.rs  view.rs
src/backend/: sfml.rs
src/gui/: advanced_open_window.rs  bookmarks_window.rs  bottom_panel.rs  command.rs  debug_window.rs  dialogs.rs  egui_ui_ext.rs  external_command_window.rs  file_diff_result_window.rs  file_ops.rs  find_dialog.rs  find_memory_pointers_window.rs  help_window.rs  inspect_panel.rs  layouts_window.rs  message_dialog.rs  meta_diff_window.rs  open_process_window.rs  ops.rs  perspectives_window.rs  preferences_window.rs  regions_window.rs  root_ctx_menu.rs  selection_menu.rs  top_menu.rs  top_panel.rs  util.rs  views_window.rs  windows.rs
src/gui/dialogs/: auto_save_reload.rs  jump.rs  lua_color.rs  lua_execute.rs  lua_fill.rs  pattern_fill.rs  truncate.rs  x86_asm.rs
src/gui/top_menu/: analysis.rs  cursor.rs  edit.rs  file.rs  help.rs  meta.rs  perspective.rs  plugins.rs  scripting.rs  view.rs
src/gui/windows/: about.rs  advanced_open.rs  bookmarks.rs  bookmarks_window.rs  debug_window.rs  external_command.rs  external_command_window.rs  file_diff_result.rs  file_diff_result_window.rs  find_dialog.rs  find_memory_pointers_window.rs  layouts.rs  layouts_window.rs  lua_console.rs  lua_editor.rs  lua_help.rs  lua_watch.rs  meta_diff.rs  meta_diff_window.rs  open_process.rs  open_process_window.rs  perspectives.rs  perspectives_window.rs  preferences.rs  preferences_window.rs  regions.rs  regions_window.rs  script_manager.rs  structs.rs  structs_window.rs  vars.rs  views.rs  views_window.rs  zero_partition.rs
src/lens/: ascii.rs  block.rs  hex.rs
src/meta/: perspective.rs  region.rs  value_type.rs
src/ui/: bookmarks_window.rs  bottom_panel.rs  debug_window.rs  dialogs.rs  file_diff_result_window.rs  find_dialog.rs  help_window.rs  inspect_panel.rs  layouts_window.rs  meta_diff_window.rs  open_process_window.rs  perspectives_window.rs  regions_window.rs  top_menu.rs  top_panel.rs  views_window.rs  window_open.rs
src/view/: ascii.rs  block.rs  draw.rs  generic.rs  hex.rs
src/views/: ascii.rs  block.rs  hex.rs
test_files/: plaintext.txt
