[package]
name = "hexerator"
version = "0.3.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
backend-sfml = ["egui-sfml"]
default = ["backend-sfml"]

[dependencies]
gamedebug_core = { git = "https://github.com/crumblingstatue/gamedebug_core.git" }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
directories = "5.0.1"
recently_used_list = { git = "https://github.com/crumblingstatue/recently_used_list.git" }
memchr = "2.7.2"
glu-sys = "0.1.4"
thiserror = "1.0.58"
either = "1.10.0"
tree_magic_mini = { version = "3.1.4", features = ["tree_magic_db"] }
bytemuck = "1.15.0"
egui_commonmark = "0.15.0"
slotmap = { version = "1.0.7", features = ["serde"] }
egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git", optional = true }
num-traits = "0.2.18"
serde-big-array = "0.5.1"
egui = "0.27.2"
egui_extras = { version = "0.27.2", default-features = false }
itertools = "0.12.1"
sysinfo = { version = "0.30.8", default-features = false }
proc-maps = "0.3.2"
open = "5.1.2"
egui-modal = { git = "https://github.com/n00kii/egui-modal.git" }
arboard = { version = "3.3.2", default-features = false }
paste = "1.0.14"
iced-x86 = "1.21.0"
strum = { version = "0.26.2", features = ["derive"] }
parking_lot = "0.12.1"
egui_code_editor = {git = "https://github.com/p4ymak/egui_code_editor.git"}
mlua = { version = "0.9.7", features = ["luajit"] }
egui-file-dialog = { git = "https://github.com/crumblingstatue/egui-file-dialog.git", branch = "hexerator" }
human_bytes = "0.4.3"

[target."cfg(windows)".dependencies.windows-sys]
 version = "0.52.0"
 features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Uncomment in case incremental compilation breaks things
#[profile.dev]
#incremental = false # Buggy rustc is breaking code with incremental compilation

# Compile deps with optimizations in dev mode
[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
lto = "thin"

[build-dependencies]
vergen = { version = "8.3.1", default-features = false, features = ["build", "cargo", "git", "gitcl", "rustc"] }
