cargo-features = ["trim-paths"]

[package]
name = "hexerator"
version = "0.4.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
backend-sfml = ["egui-sfml"]
default = ["backend-sfml"]

[dependencies]
gamedebug_core = { git = "https://github.com/crumblingstatue/gamedebug_core.git" }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
directories = "5.0.1"
recently_used_list = { git = "https://github.com/crumblingstatue/recently_used_list.git" }
memchr = "2.7.2"
glu-sys = "0.1.4"
thiserror = "1.0.58"
either = "1.10.0"
tree_magic_mini = { version = "3.1.4", features = ["tree_magic_db"] }
bytemuck = "1.15.0"
slotmap = { version = "1.0.7", features = ["serde"] }
egui-sfml = { version = "0.7.0", optional = true }
num-traits = "0.2.18"
serde-big-array = "0.5.1"
egui = { version = "0.29", features = ["serde"] }
egui_extras = { version = "0.29", default-features = false }
itertools = "0.13"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
proc-maps = "0.4.0"
open = "5.1.2"
egui-modal = "0.5.0"
arboard = { version = "3.3.2", default-features = false }
paste = "1.0.14"
iced-x86 = "1.21.0"
strum = { version = "0.26.2", features = ["derive"] }
parking_lot = "0.12.1"
egui_code_editor = "0.2.10"
# luajit breaks with panic=abort, because it relies on unwinding for exception handling
mlua = { version = "0.10", features = ["lua54", "vendored"] }
egui-file-dialog = { git = "https://github.com/fluxxcode/egui-file-dialog.git", branch = "develop" }
human_bytes = "0.4.3"
shlex = "1.3.0"
smart-default = "0.7.1"
egui-fontcfg = { git = "https://github.com/crumblingstatue/egui-fontcfg.git" }
egui_colors = { git = "https://github.com/frankvgompel/egui_colors.git" }
libloading = "0.8.3"
hexerator-plugin-api = { path = "hexerator-plugin-api" }
image = "0.25"
structparse = { git = "https://github.com/crumblingstatue/structparse.git" }

[target."cfg(windows)".dependencies.windows-sys]
 version = "0.59.0"
 features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Uncomment in case incremental compilation breaks things
#[profile.dev]
#incremental = false # Buggy rustc is breaking code with incremental compilation

# Compile deps with optimizations in dev mode
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
panic = "abort"
trim-paths = "all"

[profile.release]
panic = "abort"
lto = "thin"
trim-paths = "all"
codegen-units = 1

[build-dependencies]
vergen-gitcl = { version = "1.0.0", default-features = false, features = ["build", "cargo", "rustc"] }

[workspace]
members = ["hexerator-plugin-api", "plugins/hello-world"]
